<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lhj.petpicselector161102.MainActivity">

    <RadioGroup
        android:id="@+id/rdgPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDog" />

        <RadioButton
            android:id="@+id/rdbCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCat" />

        <RadioButton
            android:id="@+id/rdbRabbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRabbit" />

        <RadioButton
            android:id="@+id/rdbHorse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strHorse" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSelect" />
</LinearLayout>
